--- a/conf/supervisord.conf
+++ b/conf/supervisord.conf
@@ -1,4 +1,4 @@
 [program:taskserver]
-command = /home/ken/.pyenv/shims/gunicorn sample:app --config /home/ken/apps/taskserver/conf/gunicorn.py
+command = /home/ken/.pyenv/shims/gunicorn app:app --config /home/ken/apps/taskserver/conf/gunicorn.py
 directory = /home/ken/apps/taskserver
 user = ken
