add init script for celery development

--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,10 @@ machine:
   python:
     version: 3.5.0
 
+dependencies:
+    pre:
+      - ./dev/init.sh
+
 test:
   override:
     - python run_tests.py
