--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ alembic==0.8.3
 amqp==1.4.7
 anyjson==0.3.3
 billiard==3.3.0.21
-celery==4.0.0b1
+celery==4.0.0rc1
 fake-factory==0.5.3
 Flask==0.10.1
 itsdangerous==0.24
